lang/macro/tests/ui/fail/06-constructor-no-mut-ref.rs
use liquid_lang as liquid;

#[liquid::contract(version = "0.1.0")]
mod noop {
    #[liquid(storage)]
    struct Noop {}

    #[liquid(methods)]
    impl Noop {
        pub fn constructor(&self) {}

        pub fn noop(&self) {}
    }
}

fn main() {}
