lang/macro/tests/ui/fail/06-constructor-no-mut-ref.stderr
error: `&mut self` is mandatory for constructor of liquid contract
  --> $DIR/06-constructor-no-mut-ref.rs:10:28
   |
10 |         pub fn constructor(&self) {}
   |                            ^^^^^
